# nhanh_api_dagster

./: .gitignore  Dockerfile  Get detail code.ipynb  dagster_cloud.yaml  project_complete_info.txt  pyproject.toml  requirements.txt  workspace.yaml
.github/workflows/: branch_deployments.yml  deploy.yml
docs/: README.md
project/: __init__.py  config.py  repository.py
project/jobs/: __init__.py  nhanh_data_pipeline.py
project/ops/: __init__.py  bills_ops.py  imexs_ops.py  utils_ops.py
project/resources/: __init__.py  database_resource.py  nhanh_api_resource.py
project/schedules/: __init__.py  daily_schedule.py
