[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhanh-api-dagster"
version = "0.1.0"
description = "Dagster pipeline for Nhanh.vn API data extraction and loading"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0", 
    "dagster-duckdb>=0.21.0",
    "dlt[duckdb]>=0.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["project*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]
